# Magma

./: CMakeLists.txt  LICENSE.txt  README.md  desktop.ini  vcpkg.json
resources/: RCa29816  app-icon.rc
resources/models/: cube.fbx  fundamental_cube.fbx  monke.fbx  sphere.fbx
resources/shaders/: basic.frag  basic.vert
src/: AudioEngine.cpp  Camera.cpp  GameLayer.cpp  ImGuiLayer.cpp  Input.cpp  LayerStack.cpp  Mesh.cpp  Model.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  Window.cpp  main.cpp
src/include/: AudioEngine.h  Camera.h  GameLayer.h  ImGuiLayer.h  Input.h  Layer.h  LayerStack.h  Mesh.h  Model.h  Renderer.h  Shader.h  ShaderProgram.h  Texture.h  Window.h
